--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-numpy~=1.26.4
-setuptools~=69.1.1
-PyAutoGUI~=0.9.54
-Pillow~=10.3.0
-PyScreeze~=0.1.30
-opencv-python~=4.10.0.82
-keyboard~=0.13.5
-pywin32~=306
+numpy==2.2.6
+opencv-python==4.12.0.88
+Pillow==11.3.0
+pyautogui==0.9.54
